# MarsBots

./: Cargo.toml
client/: Cargo.toml
client/src/: fps.rs  input.rs  main.rs  settings.rs  singleplayer.rs  texture.rs  window.rs  world.rs
client/src/gui/: experiments.rs
client/src/render/: buffers.rs  frustum.rs  init.rs  mod.rs  render.rs  ui.rs
client/src/render/world/: meshing.rs  meshing_worker.rs  mod.rs  model.rs  skybox.rs
client/src/ui/: mod.rs
common/: Cargo.toml
common/src/: lib.rs  registry.rs  worker.rs  world.rs
common/src/block/: mod.rs
common/src/data/: mod.rs
common/src/data/vox/: item.rs  mod.rs
common/src/item/: mod.rs
common/src/network/: mod.rs
common/src/physics/: mod.rs
old/client/: Cargo.toml
old/client/src/render/: render.rs
old/common/: Cargo.toml
old/common/src/data/: mod.rs
old/common/src/data/vox/: mod.rs
old/network/: Cargo.toml
old/network/src/: packet.rs
old/network/tests/: connection.rs
old/server/: Cargo.toml
quint/: Cargo.toml
quint/src/: event.rs
server/: Cargo.toml
server/src/: lib.rs  world.rs  worldgen.rs
server/src/light/: mod.rs  sunlight.rs  worker.rs
wgpu_glyph/: Cargo.toml
wgpu_glyph/src/: pipeline.rs
