[package]
name = "voxel-rs-network"
version = "0.1.0"
authors = ["Technici4n", "Azercoco"]
edition = "2018"

[dependencies]
# Utilities
env_logger = "0.11.5"
lazy_static = "1.4.0"
log = "0.4"
rand = "0.8"
# Encoding
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
crc = "3.2.1"
bitvec = { version = "1.0.1", features = ["serde"] }
